--- a/gb/18/1/2/n10016288.md
+++ b/gb/18/1/2/n10016288.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yrsmsb310/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yrsmsb310/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yrsmsb310/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“仿佛在天堂看演出”神韵旧金山首场爆满</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/01/1801012141452153-600x400.jpg" />
 <h6>神韵国际艺术团于2018年元月1日新年之际在旧金山歌剧院上演的首场演出出现一票难求的盛况。（周容／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2018年01月02日讯】（大纪元记者周容旧金山报导）<ahref="https://github.com/yrsmsb310/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在圆满完成圣荷西场场爆满加座、座无虚席的演出后，于2018年元月1日新年之际在<ahref="https://github.com/yrsmsb310/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（War Memorial Opera House）上演首场演出。当天，神韵演出一票难求，人们都想在这新年开启的第一天一睹享有“世界第一秀”美名的神韵演出，为自己带来好运。</p>
-<p>旧金山新年首场演出的票早已售罄，不少<ahref="https://github.com/yrsmsb310/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>粉丝为能在新年第一天看到神韵，特地在当天下午演出开演前，在剧院前等票。</p>
-<p>新年的第一天，旧金山阳光明媚。<ahref="https://github.com/yrsmsb310/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>内，天国世界殊胜壮丽，浩瀚星空光辉璀璨，神韵展现出五千年文明板荡，<ahref="https://github.com/yrsmsb310/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96.md#1">创世</a>的辉煌，深深激荡着每一位观众的心。</p>
-<h2>医学教授：仿佛是在<ahref="https://github.com/yrsmsb310/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>看演出！</h2>
+	<p>【大纪元2018年01月02日讯】（大纪元记者周容旧金山报导）<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在圆满完成圣荷西场场爆满加座、座无虚席的演出后，于2018年元月1日新年之际在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（War Memorial Opera House）上演首场演出。当天，神韵演出一票难求，人们都想在这新年开启的第一天一睹享有“世界第一秀”美名的神韵演出，为自己带来好运。</p>
+<p>旧金山新年首场演出的票早已售罄，不少<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>粉丝为能在新年第一天看到神韵，特地在当天下午演出开演前，在剧院前等票。</p>
+<p>新年的第一天，旧金山阳光明媚。<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>内，天国世界殊胜壮丽，浩瀚星空光辉璀璨，神韵展现出五千年文明板荡，<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96.md#1">创世</a>的辉煌，深深激荡着每一位观众的心。</p>
+<h2>医学教授：仿佛是在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>看演出！</h2>
 <figure id="attachment_10016337" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/01/1801012123432153.jpg"><img class="wp-image-10016337 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/01/1801012123432153-450x309.jpg" alt="" width="450" b="309" /></a><figcaption class="wp-caption-text">斯坦福大学医学教授Jose Montoya表示，观看神韵可以同时治愈身体和心灵。（周容／大纪元）</figcaption></figure>
-<p>“太美了！我们仿佛是在<ahref="https://github.com/yrsmsb310/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>看演出！”斯坦福大学医学教授Jose Montoya看完演出后说，“这是我看过的最精美绝伦的演出！我们感到非常幸福。”</p>
+<p>“太美了！我们仿佛是在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>看演出！”斯坦福大学医学教授Jose Montoya看完演出后说，“这是我看过的最精美绝伦的演出！我们感到非常幸福。”</p>
 <p>Montoya携妻子带着孩子观看了新年在旧金山的首场演出。他对神韵演员的演出赞叹不已，“他们好似在天空中飘浮，身穿美丽的衣裳，随着悠扬悦耳的音乐，优美的舞动着，像是在天堂中的演出。”</p>
 <p>“音乐和艺术可以起到医治作用，我是医生。而神韵的演出对身体和心灵同时起到了疗愈作用。”他说。</p>
 <p>“神韵演出将我们引领到一起。”身为治疗师的Montoya表示，人类有神性，“大家应该来看神韵，看神韵会疗愈你，让你变好，为了疗愈也要来看神韵。”</p>
@@ -48,43 +48,37 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/12/31/n10009875.md#1">临床副教授：神韵舞蹈诠释普世价值 美不胜收</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/12/31/n10010389.md#1">慈善机构总裁和艺术家看神韵：如获殊荣</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/12/31/n10011119.md#1">经理：神韵制作“精致、太精致了！”</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/12/31/n10011221.md#1">神韵圣荷西连4场爆满 观众感受神的慈悲</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/12/31/n10011318.md#1">画家：神韵天国圣景 令我热泪盈眶</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/12/31/n10011621.md#1">公司老板：我们需要更多神韵这样的演出</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/12/31/n10009875.md#1">临床副教授：神韵舞蹈诠释普世价值 美不胜收</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/12/31/n10010389.md#1">慈善机构总裁和艺术家看神韵：如获殊荣</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/12/31/n10011119.md#1">经理：神韵制作“精致、太精致了！”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/12/31/n10011221.md#1">神韵圣荷西连4场爆满 观众感受神的慈悲</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/12/31/n10011318.md#1">画家：神韵天国圣景 令我热泪盈眶</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/12/31/n10011621.md#1">公司老板：我们需要更多神韵这样的演出</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11584537.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">阅读《转法轮》 大洋洲法轮功学员谈感悟</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/5/n11701848.md#1" target="_blank">袁斌：从《共产党宣言》看共产主义的破坏性</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/23/n12706868.md#1">2021预测：全球瘟疫更具毁灭性 善恶大决战</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/23/n12707590.md#1">史前文明：地球上真的生活着三种人？</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12712517.md#1">【西岸观察】大法官退缩 弹劾势必难产？</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12711807.md#1">【远见快评】中共舞剑意在拜登 习喊话投石问路</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12712047.md#1">【珍言真语】刘锐绍：人大将改香港特首选规</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/24/n12709011.md#1">【一线采访】吉林通化极端封城 市民断粮</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12709466.md#1">【一线采访】疫情攻破5区 上海为保两会隐瞒</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/24/n12709154.md#1">模仿邓超变谐星？孙俪同父异母妹妹晒照自黑</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12711517.md#1">大陆山寨版IU爆红 真实相貌曝光惊呆网友</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/24/n12709154.md#1">模仿邓超变谐星？孙俪同父异母妹妹晒照自黑</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/24/n12708979.md#1">胡静不愿被称豪门阔太 自曝一身装扮仅五百元</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12711753.md#1">武汉封城周年零热搜 袁弘帖文钓出被噤声内幕</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/24/n12708753.md#1">好莱坞演员分享和青梅竹马33年婚姻秘诀</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/24/n12708389.md#1">加拿大女子梦游 丈夫拍下爆笑画面</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12710391.md#1">英军超级狙击手 一枪歼灭5名IS分子</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/24/n12708472.md#1">美富翁出100万美元 奖励死后有来世的研究</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/23/n12707431.md#1">酒精消毒如何做有效又安全？医师、消防员教秘诀</a></li>
-<li><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12712049.md#1">用餐时别吃下新冠病毒！2关键给食物灭毒</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/1/2/n10016288.htm">“仿佛在天堂看演出”神韵旧金山首场爆满</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/1/2/n10016288.htm">“仿佛在天堂看演出”神韵旧金山首场爆满</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/18/1/2/n10016288.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yrsmsb310/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yrsmsb310/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yrsmsb310/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrsmsb310/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/18/1/2/n10016288.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
